@@ -35,6 +35,9 @@ Release 1.1.3 (in development)
 
 * #832: Fix crashes when putting comments or lone terms in a glossary.
 
+* #834: Fix HTML help language/encoding mapping for all Sphinx supported
+  languages.
+
 
 Release 1.1.2 (Nov 1, 2011) -- 1.1.1 is a silly version number anyway!
 ======================================================================
